--- a/ll-website.css
+++ b/ll-website.css
@@ -1,3 +1,57 @@
+
+/* Aj's styling */
+
+.background-image{
+
+    width:50%;
+    height:80%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    overflow-clip-margin: content-box;
+    overflow: clip;
+    direction: ltr;
+    unicode-bidi: isolate;
+    border: 0px;
+    border-radius: 0px;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+    z-index:-1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Aj's styling */
+
+
 /* Reset some default styles for better consistency */
 body, h1, h2, p {
     margin: 0;
@@ -25,6 +79,9 @@ nav ul {
     margin: 0;
     display: flex;
     justify-content: center;
+    align-content: center;
+    padding-bottom: 1%;
+    padding-top: 1%;
 }
 
 nav ul li {
